20240420 v0.2 referències PAC1 einesHTMLCSS Judith Aragones

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><strong>Home</strong></li>
                 <li><a href="blaumut.html">Qui són Blau Mut?</a></li>
                 <li><a href="concerts.html">Concerts</a></li>
+                <li><a href="referencies.html">Referències</a></li>
             </ul>
         </nav>
     </header>
