--- a/blaumut.html
+++ b/blaumut.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><strong>Qui són Blau Mut?</strong></li>
                 <li><a href="concerts.html">Concerts</a></li>
+                <li><a href="referencies.html">Referències</a></li>
             </ul>
         </nav>
     </header>
