--- a/concerts.html
+++ b/concerts.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="blaumut.html">Qui són Blau Mut?</a></li>
                 <li><strong>Concerts</strong></li>
+                <li><a href="referencies.html">Referències</a></li>
             </ul>
         </nav>
     </header>
