20240420 v0.2 footer einesHTMLCSS Judith Aragones

--- a/blaumut.html
+++ b/blaumut.html
@@ -161,13 +161,7 @@
             
         </div>
     </main>
-    <footer>
-        <div class="footer-content">
-            <p>- &copy; Judith Aragones</p>
-            <p>- Basat en informació de wikipèdia</p>
-            <p>- UOC. Eines HTML i CSS. PAC1</p>
-        </div>
-    </footer>
+    <include src="footer.html"></include>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
