--- a/index.html
+++ b/index.html
@@ -45,13 +45,8 @@
             <p>Fan lletres plenes d'imatges i arranjaments d'instruments clàssics de corda, que formen l'atmosfera de les seves cançons.</p>
         </section>
     </main>
-    <footer>
-        <footer>
-            <p>- &copy; Judith Aragones</p>
-            <p>- Basat en informació de wikipèdia</p>
-            <p>- UOC. Eines HTML i CSS. PAC1</p>
-        </footer>        
-    </footer>
+    
+    <include src="footer.html"></include>
     <script src="./scripts/scripts.js"></script>
 </body>
 </html>
