--- a/referencies.html
+++ b/referencies.html
@@ -28,14 +28,8 @@
         <!-- Afegeix altres referències aquí -->
     </ul>
 </main>
-    <footer>
-        <footer>
-            <p>- &copy; Judith Aragones</p>
-            <p>- Basat en informació de wikipèdia</p>
-            <p>- UOC. Eines HTML i CSS. PAC1</p>
-        </footer>        
-    </footer>
-    <script src="./scripts/scripts.js"></script>
+<include src="footer.html"></include>
+<script src="./scripts/scripts.js"></script>
 
 
 </body>
