20240527 actualitzacio repository PAC2 einesHTMLCSS Judith Aragones

--- a/blaumut.html
+++ b/blaumut.html
@@ -4,23 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blaumut</title>
-    <link rel="stylesheet" href="css/stylesBlaumut.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><strong>Qui són Blau Mut?</strong></li>
-                <li><a href="concerts.html">Concerts</a></li>
-                <li><a href="referencies.html">Referències</a></li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <img src="images/logos/logo_rodo.jpg" alt="Logotip" class="logo">
+            <h1>BlauMut Info per a new Fans</h1>
+        </div>
     </header>
     <main>
-        <!--div class="background">
-            
-        </div-->
         <div class="content">
             <table>
                 <tr>
@@ -160,8 +153,20 @@
             </div>
             
         </div>
+
     </main>
-    <include src="footer.html"></include>
+    <footer>
+            <img src="images/logos/logo4_rodo.jpg" alt="Logotip" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="detall.html">Detall</a></li>
+                    <li><strong>Categoria</strong></li>
+                    <li><a href="concerts.html">Concerts</a></li>
+                    <li><a href="referencies.html">Referències</a></li>
+                </ul>
+            </nav>
+    </footer>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
