--- a/referencies.html
+++ b/referencies.html
@@ -9,18 +9,16 @@
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="blaumut.html">Qui són Blau Mut?</a></li>
-                <li><a href="concerts.html">Concerts</a></li>
-                <li><strong>Referències</strong></li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <img src="images/logos/logo_rodo.jpg" alt="Logotip" class="logo">
+            <h1>BlauMut Info per a new Fans</h1>
+        </div>
     </header>
     <main>
-    <h1>Referències sobre Blaumut</h1>
-    <ul class="unstyled-list">
+
+    <h2>Referències sobre Blaumut</h2>
+
+    <ul class="unstyled-list-centered">
         <li><a href="https://www.blaumut.com/">Lloc web oficial de Blaumut</a></li>
         <li><a href="https://ca.wikipedia.org/wiki/Blaumut">Pàgina de Wikipedia sobre Blaumut</a></li>
         <li><a href="https://www.instagram.com/blaumut/">Instagram de Blaumut</a></li>
@@ -28,9 +26,20 @@
         <!-- Afegeix altres referències aquí -->
     </ul>
 </main>
-<include src="footer.html"></include>
+
+<footer>
+    <img src="images/logos/logo4_rodo.jpg" alt="Logotip" class="logo">
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="detall.html">Detall</a></li>
+
+            <li><a href="blaumut.html">Categoria</a></li>
+            <li><a href="concerts.html">Concerts</a></li>
+            <li><strong>Referències</strong></li>
+        </ul>
+    </nav>
+</footer>
 <script src="./scripts/scripts.js"></script>
-
-
 </body>
 </html>
