--- a/index.html
+++ b/index.html
@@ -9,44 +9,46 @@
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><strong>Home</strong></li>
-                <li><a href="blaumut.html">Qui són Blau Mut?</a></li>
-                <li><a href="concerts.html">Concerts</a></li>
-                <li><a href="referencies.html">Referències</a></li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <img src="images/logos/logo_rodo.jpg" alt="Logotip" class="logo">
+            <h1 class="animat-titol">BlauMut Info per a new Fans</h1>
+        </div>
     </header>
     <main>
         <audio id="audio" controls>
             <source src="audio/bicicletes.m4a" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
-        <section class="content">
-            <!-- Text sobre la banda Blau Mut -->
-            <p>Ens trobem aquí per presentar-vos una banda que està revolucionant l'escena musical catalana i més enllà: "Blau Mut".</p>
-            <p>Imaginin-se un viatge musical pels racons més profunds de l'ànima catalana, on la tradició es troba amb la innovació, i les melodies antigues es barregen amb els ritmes moderns.</p>
-            <p>Això és el que ofereix "Blau Mut", un grup que ha sabut captar l'essència de la música catalana i portar-la a nous horitzons.</p>
-            <p>Qui són "Blau Mut"?</p> 
-            <p>Són un grup format per artistes apassionats, cadascun amb la seva pròpia història i el seu propi estil, però units per una passió comuna: la música. </p>
-            <p>Inspirats per la riquesa cultural de Catalunya, han creat un so únic que parla directament al cor de qui ho escolta.</p>    
-            <p>Blaumut és una formació musical que combina el folk-pop, la música clàssica i la cançó d'autor.</P>
-            <p>El nom del grup ve de la cançó «Islàndia» del seu disc El turista.</p> 
-            <p>Està integrada per:
-                <ul class="no-bullets">
-                    <li>Oriol Aymat (violoncel)</li>
-                    <li>Xavi de la Iglesia (guitarra i veu)</li>
-                    <li>Vassil Lambrinov (violí)</li>
-                    <li>Manuel Krapovickas (contrabaix i baix elèctric)</li>
-                    <li>Fins al 2021 Manel Pedrós (bateria), substituit per Toni Pagès (percussió, bateria i veu)</li>
-                </ul> 
-            </p> 
-            <p>Fan lletres plenes d'imatges i arranjaments d'instruments clàssics de corda, que formen l'atmosfera de les seves cançons.</p>
-        </section>
+        <nav>
+            <ul>
+                <li><strong>Home</strong></li>
+                <li><a href="detall.html">Detall</a></li>                    
+                <li><a href="blaumut.html">Categoria</a></li>
+                <li><a href="concerts.html">Concerts</a></li>
+                <li><a href="referencies.html">Referències</a></li>
+            </ul>
+        </nav>
+
+        
+        <div class="container">
+            <img src="images/imatgeClipPath.jpg" alt="Imatge tallada amb clip-path" class="imatge-clip-path">
+            <h1>Exemple amb Clip-Path</h1>
+          </div>
+
     </main>
     
-    <include src="footer.html"></include>
+    <footer>
+            <img src="images/logos/logo4_rodo.jpg" alt="Logotip" class="logo">
+            <nav>
+                <ul>
+                    <li><strong>Home</strong></li>
+                    <li><a href="detall.html">Detal</a></li>                    
+                    <li><a href="blaumut.html">Categoria</a></li>
+                    <li><a href="concerts.html">Concerts</a></li>
+                    <li><a href="referencies.html">Referències</a></li>
+                </ul>
+            </nav>
+    </footer>
     <script src="./scripts/scripts.js"></script>
 </body>
 </html>
